<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="taskoneaxiom.com.axiomtasks.FirstActivity">
<LinearLayout
    android:padding="8dp"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/round_button"
        android:text="@string/plus"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/text_view_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/text_zero"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/round_button"
        android:text="@string/minus"
        android:textColor="#FFFFFF" />

</LinearLayout>
</LinearLayout>
