<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="taskoneaxiom.com.axiomtasks.SecondActivity">

       
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:layout_gravity="center_horizontal"
            android:text="@string/registration_form"
            android:textAlignment="center"
            android:textColor="@color/colorButtons"
            android:textSize="24sp" />

    <!-- A CardView that contains a TextView -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:hint="@string/phone"
            android:inputType="number"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/submit"
        android:textColor="#FFFFFF" />
    
    <LinearLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/output_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" 
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/output_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" 
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/output_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <Button
            android:id="@+id/button_next"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/string_next"
            android:textColor="#FFFFFF"/>    
        <Button
            android:id="@+id/button_previous"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/string_previous"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</LinearLayout>
